--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "minesweeper-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.10",
+    "node": "10.23.2"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "react": "^17.0.1",
