--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-snake": "^0.2.2",
     "react-toastify": "^6.1.0",
     "styled-components": "^5.3.0",
     "use-sound": "^1.0.2",
