--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "node": "12.21.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "^0.21.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-chrome-dino": "^0.1.3",
     "react-dinosaur-game": "^1.0.0",
@@ -16,6 +20,7 @@
     "react-scripts": "4.0.0",
     "react-simple-snake": "^0.2.2",
     "react-toastify": "^6.1.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.0",
     "use-sound": "^1.0.2",
     "web-vitals": "^0.2.4"
@@ -44,7 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "node-sass": "^6.0.1"
-  }
+  "devDependencies": {}
 }
