--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-chrome-dino": "^0.1.3",
     "react-dinosaur-game": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-simple-snake": "^0.2.2",
